syntax = "proto3";

package entities;

message ProductEntity {
    string id = 1;
    bool isPremium = 2;
    int32 goldAmount = 3;
    float tokenAmount = 4;
    string type = 5;
    int32 animalId = 6;
    string animal = 7;
    int32 cropId = 8;
    string crop = 9;
}